pxc/tests/test_001_px/constinh2.px
public namespace constinh2;
import common -;


threaded interface ifoo {
  public function long mfoo(long v) const;
}

threaded struct sfoo < ifoo > {
  public function long mfoo(long v) { // error: constness
    return v + 3;
  }
}

{
  ptr{sfoo} p = make_ptr(sfoo());
  ptr{ifoo} ip = p;
  println(ip->mfoo(3));
}

